--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.create.vista.com/api/media/medium/422875710/stock-vector-letter-logo-design-vctor-template-logo-design?token=" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>DevTinder👩‍💻</title>
   </head>
   <body>
     <div id="root"></div>
